# MiniEngineSDL2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  export_readme.txt  vcpkg.json
assets/levels/: level01.txt  test_level.txt
src/: main.cpp
src/engine/: Actions.h  Animator.h  Assert.h  AssetManager.cpp  AssetManager.h  BulletSystem2D.cpp  BulletSystem2D.h  Camera2D.cpp  Camera2D.h  CollisionWorld2D.cpp  CollisionWorld2D.h  Config.h  EnemySystem2D.cpp  EnemySystem2D.h  Engine.cpp  Engine.h  EngineContext.h  Entity2D.h  HealthSystem2D.cpp  HealthSystem2D.h  IGame.h  IScene.h  Input.cpp  Input.h  InputMap.cpp  InputMap.h  LevelData.h  LevelIO.cpp  LevelIO.h  Log.cpp  Log.h  NavigationGrid2D.cpp  NavigationGrid2D.h  ParticleSystem2D.cpp  ParticleSystem2D.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  SpriteSheet.cpp  (+11 more)
src/engine/math/: Vec2.h
src/game/: DemoGame.cpp  DemoGame.h  DemoScene.cpp  DemoScene.h  GamePaths.h  MenuScene.cpp  MenuScene.h  PauseScene.cpp  PauseScene.h
